# bigtent

./: .gitignore  ARCHITECTURE.md  BENCHMARKING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  PERFORMANCE.md  README.md  RELEASE_PROCESS.md  build.rs  default.nix  docker-compose.yml  openapi.yaml  rustfmt.toml  source-printer.html  source-printer.org
.github/workflows/: README.md  build.yml  publish.yml  rust_ci.yml  rust_container_publishing.yml  rust_publish_images.yml  spice_grinder_ci.yml
benches/: README.md  criterion.toml  data_generator.rs  generate_test_data.sh  manage_baselines.sh  merge_benchmarks.rs
benches/baselines/main/20260303_173014/buffer_limit/1000/base/: benchmark.json  estimates.json  sample.json  tukey.json
benches/baselines/main/20260303_173014/buffer_limit/1000/change/: estimates.json
benches/baselines/main/20260303_173014/buffer_limit/1000/report/: index.html
benches/baselines/main/20260303_173014/buffer_limit/10000/base/: tukey.json
benches/baselines/main/20260303_173014/buffer_limit/10000/change/: estimates.json
benches/baselines/main/20260303_173014/buffer_limit/10000/new/: benchmark.json  estimates.json  sample.json
benches/baselines/main/20260303_173014/buffer_limit/10000/report/: index.html
benches/baselines/main/20260303_173014/buffer_limit/100000/base/: benchmark.json  estimates.json  sample.json
benches/baselines/main/20260303_173014/buffer_limit/100000/change/: estimates.json
benches/baselines/main/20260303_173014/buffer_limit/100000/new/: tukey.json
benches/baselines/main/20260303_173014/buffer_limit/100000/report/: index.html
benches/baselines/main/20260303_173014/buffer_limit/50000/base/: benchmark.json  estimates.json  sample.json  tukey.json
benches/baselines/main/20260303_173014/buffer_limit/50000/change/: estimates.json
benches/baselines/main/20260303_173014/buffer_limit/50000/report/: index.html
benches/baselines/main/20260303_173014/buffer_limit/report/: index.html
benches/baselines/main/20260303_173014/report/: index.html
benches/baselines/main/20260303_173014/scale/10000/base/: tukey.json
benches/baselines/main/20260303_173014/scale/10000/change/: estimates.json
benches/baselines/main/20260303_173014/scale/10000/new/: benchmark.json  estimates.json  sample.json
benches/baselines/main/20260303_173014/scale/10000/report/: index.html
benches/baselines/main/20260303_173014/scale/100000/base/: benchmark.json  estimates.json  sample.json
benches/baselines/main/20260303_173014/scale/100000/change/: estimates.json
benches/baselines/main/20260303_173014/scale/100000/new/: tukey.json
benches/baselines/main/20260303_173014/scale/100000/report/: index.html
benches/baselines/main/20260303_173014/scale/50000/base/: estimates.json  sample.json
benches/baselines/main/20260303_173014/scale/50000/change/: estimates.json
benches/baselines/main/20260303_173014/scale/50000/new/: benchmark.json  tukey.json
benches/baselines/main/20260303_173014/scale/50000/report/: index.html
benches/baselines/main/20260303_173014/scale/report/: index.html
bintent/: Cargo.toml
bintent/src/: #lib.rs#  .#lib.rs  item.rs  main.rs  mod_share.rs  server.rs
examples/: Caddyfile  bigtent.service  logrotate.conf  nginx.conf
info/: README.md  config.md  files_and_formats.md  operations.md
libgoat/: Cargo.toml  build.rs
libgoat/src/: fresh_merge.rs  goat_herd.rs  lib.rs  member.rs  mod_share.rs  util.rs
libgoat/src/rodeo/: cluster.rs  goat_trait.rs  holder.rs  index.rs  mod.rs  robo_goat.rs  writer.rs
notebooks/: 0_Introduction.ipynb
src/: bench_util.rs  bundle_writer.rs  cluster_holder.rs  cluster_list.rs  cluster_writer.rs  config.rs  data_file.rs  envelopes.rs  fresh_merge.rs  index.rs  index_file.rs  indexer.rs  item.rs  lib.rs  live_merge.rs  main.rs  merger.rs  mod_share.rs  old_format.rs  pid_file.rs  rodeo.rs  rodeo_server.rs  server.rs  sha_writer.rs  structs.rs  util.rs
src/rodeo/: alias_sidecar.rs  cluster.rs  data.rs  goat.rs  goat_herd.rs  goat_synth.rs  goat_trait.rs  holder.rs  index.rs  member.rs  robo_goat.rs  writer.rs
test_data/: data_1.cbor  data_114.cbor  data_121.cbor  data_124.cbor  data_132.cbor  data_133.cbor  data_135.cbor  data_137.cbor  data_140.cbor  data_146.cbor  data_15.cbor  data_156.cbor  data_159.cbor  data_168.cbor  data_170.cbor  data_178.cbor  data_184.cbor  data_189.cbor  data_20.cbor  data_209.cbor  data_212.cbor  data_213.cbor  data_231.cbor  data_242.cbor  data_25.cbor  data_250.cbor  data_256.cbor  data_26.cbor  data_260.cbor  data_261.cbor  data_262.cbor  data_267.cbor  data_278.cbor  data_28.cbor  data_287.cbor  data_288.cbor  data_312.cbor  data_313.cbor  data_317.cbor  data_319.cbor  (+207 more)
test_data/cluster_a/: 2025_04_19_17_10_26_012a73d9c40dc9c0.grc  432e473a3c3e5630.grd  674f1be2154b27d1.gri  history.jsonl  purls.txt
test_data/cluster_b/: 2025_04_19_17_10_40_09ebe9a7137ee100.grc  3c115f416c6ee8db.grd  45b6ec193ae9d587.gri  history.jsonl  purls.txt
test_data/cluster_c/: 15fb6e6119227626.grd  2025_07_24_14_43_36_68a489f4fd40c5e2.grc  4c83405bd2d845d5.gri  history.jsonl  purls.txt
test_data/cluster_d/: 1a1a00cc29060343.grd  2025_07_24_14_44_14_2b39577cd0a58701.grc  20a1c85c5b4d2156.gri  history.jsonl  purls.txt
