[package]
name = "bigtent"
version = "0.10.2"
edition = "2024"
authors = ["David Pollak <feeder.of.the.bears@gmail.com>"]
rust-version = "1.85.0"
description = "An opinionated Graph Database"
readme = "README.md"
repository = "https://bigtent.cc"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bigtent"
path = "src/lib.rs"

[[bin]]
name = "bigtent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
regex = "1.11"
md5 = "0.7.0"
sha2 = "0.10.8"
hex = "0.4.3"
bytes = "1.10"
hex-literal = "1"
shellexpand = "3.1"
chrono = "=0.4.39"

# Web Framework stuff
url = "2.5"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
axum = { version = "0.8", features = ["json", "macros"] }
axum-streams = { version = "0.21", features = ["json", "csv"] }
tower-http = { version = "0.6", features = ["full"] }
futures = "0.3"
serde-jsonlines = {version = "0.7"}

# Execution stuff
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "fs",
    "net",
] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1" }
signal-hook = "0.3.17"
arc-swap = "1.7.1"
clap = { version = "4.5", features = ["derive"] }
thousands = "0.2.0"
uuid = { version = "1.16", features = ["v4"] }
flume = { version = "0.11", features = ["spin", "async"] }
scopeguard = "1.2.0"

# Logging
log = "0.4"
env_logger = "0.11"

utoipa = { version = "5", features = ["axum_extras"] }
memmap2 = { version = "0.9" }
[dev-dependencies]
rand = "0.9.1"

[features]

longtest = [] # feature has no explicit dependencies
