[workspace]
resolver = "3"
members = [
      "bintent", # database executable
      "libgoat", # parsing 
]

[workspace.dependencies]

# Fault management
anyhow = "1.0"
thiserror = "1.0"
# todo: investigate whether error/fault separation makes sense here

# Data encoding & parsing
regex = "1.11"
bytes = "1.10"
hex = "0.4.3"
hex-literal = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["std", "derive"] }
serde_cbor = "0.11.2"

# Hashing
md5 = "0.7.0"
sha2 = "0.10.8"

# Kitchen sink
shellexpand = "3.1"
chrono = "0.4"

# Futures runtime & utils
tokio = { version = "1.44", features = [ "full" ] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1" }
signal-hook = "0.3.17"
arc-swap = "1.7.1"
clap = { version = "4.5", features = ["derive"] }
thousands = "0.2.0"
uuid = { version = "1.16", features = ["v4"] }
flume = { version = "0.11", features = ["spin", "async"] }
futures = "0.3"
scopeguard = "1.2.0"

# Web stack
axum = { version = "0.8", features = ["json", "macros"] }
axum-streams = { version = "0.21", features = ["json", "csv"] }
serde-jsonlines = { version = "0.7" }
tower-http = { version = "0.6", features = ["full"] }
url = "2.5"


# Logging
log = "0.4"
env_logger = "0.11"

utoipa = { version = "5", features = ["axum_extras"] }
memmap2 = { version = "0.9" }

vergen = { version = "9", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = {version = "1.0.7"}

[workspace.dev-dependencies]
rand = "0.9.1"
