[package]
name = "bigtent"
version = "0.13.2"
edition = "2024"
authors = ["David Pollak <feeder.of.the.bears@gmail.com>"]
rust-version = "1.86.0"
description = "An opinionated Graph Database"
readme = "README.md"
repository = "https://bigtent.cc"
license = "Apache 2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bigtent"
path = "src/lib.rs"

[[bin]]
name = "bigtent"
path = "src/main.rs"

[[bin]]
name = "data_generator"
path = "benches/data_generator.rs"

[[bench]]
name = "merge_benchmarks"
harness = false

[dependencies]
anyhow = "1.0"
regex = "1.11"
md5 = "0.7.0"
sha2 = "0.10.8"
hex = "0.4.3"
bytes = "1.10"
hex-literal = "1"
shellexpand = "3.1"
chrono = "0.4"

# Web Framework stuff
url = "2.5"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
axum = { version = "0.8", features = ["json", "macros"] }
axum-streams = { version = "0.21", features = ["json", "csv"] }
tower-http = { version = "0.6", features = ["full"] }
futures = "0.3"
serde-jsonlines = {version = "0.7"}

# Execution stuff
tokio = { version = "1.44", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "fs",
    "net",
    "signal",
] }

arc-swap = "1.7.1"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
flume = { version = "0.11", features = ["spin", "async"] }
libc = "0.2"
memmap2 = { version = "0.9" }
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.30"
prometheus = { version = "0.14", features = ["process"] }
rand = "0.9.1"
scopeguard = "1.2.0"
signal-hook = "0.3.17"
sysinfo = "0.32"
thousands = "0.2.0"
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter", "fmt"]}
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1.16", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[features]
longtest = []
extra_progress = []

[build-dependencies]
# All features enabled
vergen = { version = "9", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = {version = "1.0.7"}

