[package]
name = "bigtent"
version = "0.11.0"
edition = "2024"
authors = [
    "Aria Stewart ari@spicelabs.io",
    "Katharina Fey <kookie@spacekookie.de",
    "David Pollak <feeder.of.the.bears@gmail.com>",	
]
rust-version = "1.85.0"
description = "An opinionated Graph Database"
readme = "README.md"
repository = "https://bigtent.cc"
license = "Apache 2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bigtent"
path = "src/lib.rs"

[[bin]]
name = "bigtent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }


bytes = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
md5 = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
shellexpand = { workspace = true }


# Web Framework stuff

[features]
longtest = [] # feature has no explicit dependencies

