[package]
name = "libgoat" # alternative name: libtent
version = "0.11.0"
edition = "2024"
authors = [
    "Aria Stewart ari@spicelabs.io",
    "Katharina Fey <kookie@spacekookie.de",
    "David Pollak <feeder.of.the.bears@gmail.com>",	
]
rust-version = "1.85.0"
description = "The backend library for bigtent, the opinionated graph database"
readme = "../README.md"
repository = "https://bigtent.cc"
license = "Apache 2.0"

[features]
longtest = [] # feature has no explicit dependencies

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
md5 = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde-jsonlines = { workspace = true }
scopeguard = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
thousands = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
memmap2 = { workspace = true }
flume = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
vergen-git2 = { workspace = true }